[package]
name = "rustzss"
version = "0.1.0"
edition = "2021"
description = "Fast LZSS compression library with C/C++ FFI support"
repository = "https://github.com/username/rustzss"
license = "MIT"

[lib]
name = "rustzss"
# Create a dynamic library by default for FFI purposes
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false