[package]
name = "rustzss"
version = "0.1.0"
edition = "2021"
description = "Fast LZSS compression library with C/C++ FFI support"
repository = "https://github.com/username/rustzss"
license = "MIT"

[lib]
name = "rustzss"
# Create a dynamic library by default for FFI purposes
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8"

# Optional dependencies for autotuning
rayon = { version = "1.7", optional = true }

[dev-dependencies]
criterion = "0.5"

[features]
default = []
# Enable autotuning capabilities
autotune = ["rayon"]

[[bench]]
name = "benchmark"
harness = false